# ChatToolsAddon

./: README.md
.github/actions/summarize/: action.yml
.github/workflows/: build.yml  ci.yml
.github/workflows/scripts/: summarize.py
win10/: Cargo.toml  build.rs
win10/src/: main.rs
win7/: Win7Notify.sln  Win7Notify.vcxproj  Win7Notify.vcxproj.filters  main.cpp  resource.h
